-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.0, Lustre 2.12.0, Lustre 2.13.0
-
None
-
3
-
9223372036854775807
When file LOOKUP lock is canceled on client, its dentry becomes invalid, but this dentry is not released immediately, and is only marked "invalid" and is left in dcache and let system to reclaim when memory is tight. And it's the same for negative dentries when parent UPDATE is canceled.
Such dentries should be released to avoid OOM on client.